--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,9 @@
 PORT=4000
-REPO_ROOT=./data/repos
 NODE_ENV=development
+
+# Supabase Configuration
+SUPABASE_URL=https://your-project-id.supabase.co
+SUPABASE_KEY=your-service-role-key-here
+
+# Optional: Keep local git repos for hybrid approach
+REPO_ROOT=./data/repos
