--- a/backend/package.json
+++ b/backend/package.json
@@ -6,16 +6,15 @@
   "main": "src/server.js",
   "scripts": {
     "dev": "node --watch src/server.js",
-    "start": "node src/server.js",
-    "clean": "rimraf data/repos/*"
+    "start": "node src/server.js"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
+    "@supabase/supabase-js": "^2.38.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.19.2",
-    "isomorphic-git": "^1.27.1",
-    "morgan": "^1.10.0"
-  },
-  "devDependencies": {
-    "rimraf": "^6.0.1"
+    "morgan": "^1.10.0",
+    "uuid": "^9.0.0"
   }
 }
