--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.81.1",
     "@vitejs/plugin-react": "^5.1.0",
+    "ace-builds": "^1.43.4",
+    "monaco-editor": "^0.54.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
